Added new kind of response for API requests

--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile('org.postgresql:postgresql:42.2.2')
+    compile 'com.google.guava:guava:25.1-jre'
     testCompile("junit:junit")
 }
