--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,19 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+dependencyManagement {
+    imports {
+        mavenBom 'com.amazonaws:aws-java-sdk-bom:1.11.228'
+    }
+}
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile('org.postgresql:postgresql:42.2.2')
-    compile 'com.google.guava:guava:25.1-jre'
+    compile('com.google.guava:guava:25.1-jre')
+    compile('com.amazonaws:aws-java-sdk-s3')
+    compile(group: 'org.json', name: 'json', version: '20180130')
     testCompile("junit:junit")
 }
