--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=80
+
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
