Initial config for mongodb

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile('org.postgresql:postgresql:42.2.2')
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.8.0'
+    compile group: 'org.springframework.data', name: 'spring-data-commons', version: '2.0.8.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '2.0.8.RELEASE'
     compile('com.google.guava:guava:25.1-jre')
     compile('com.amazonaws:aws-java-sdk-s3')
     compile(group: 'org.json', name: 'json', version: '20180130')
