--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-server.port=80
+server.port=8080
 
-spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
-## Local configuration
+## AWS EC2 MongoDB
+spring.data.mongodb.uri=mongodb://4dm1n:carlos123@cluster0-afi3f.mongodb.net/clients
+
+
+## Local configuration Postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/clients
 #spring.datasource.username=admin
 #spring.datasource.password=123456
 
-## AWS RDS Configuration
-spring.datasource.url=jdbc:postgresql://dbclients.czckmgc8p4s2.us-east-2.rds.amazonaws.com/db_clients
-spring.datasource.username=c4rl05
-spring.datasource.password=c4rl05.t3n15
+## AWS RDS Configuration Postgres
+#spring.datasource.url=jdbc:postgresql://dbclients.czckmgc8p4s2.us-east-2.rds.amazonaws.com/db_clients
+#spring.datasource.username=c4rl05
+#spring.datasource.password=c4rl05.t3n15
