--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile('com.amazonaws:aws-java-sdk-s3')
     compile(group: 'org.json', name: 'json', version: '20180130')
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.22.0'
 }
