--- a/build.gradle
+++ b/build.gradle
@@ -47,5 +47,9 @@ dependencies {
     compile('com.amazonaws:aws-java-sdk-s3')
     compile(group: 'org.json', name: 'json', version: '20180130')
     testCompile("org.springframework.boot:spring-boot-starter-test")
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.22.0'
+    testCompile 'org.mockito:mockito-core:2.8.9'
+    testCompile 'org.powermock:powermock-api-mockito2:1.7.0'
+    testCompile 'org.powermock:powermock-module-junit4:1.7.0'
+    testCompile 'org.powermock:powermock-core:1.7.0'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.7.0'
 }
